# mihi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: exercises.rs  inflection.rs  init.rs  locale.rs  main.rs  nuke.rs  run.rs  tags.rs  words.rs
lib/mihi/: Cargo.toml
lib/mihi/src/: cfg.rs  exercise.rs  inflection.rs  lib.rs  migrate.rs  tag.rs  word.rs
testdata/: test.sqlite3
