[package]
name = "mihi"
version = "0.1.0"
description = "Library for the 'mihi' application"

authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
